package ar.edu.utn.frba.ddsi.climalert.entity;

public interface CorreoAdapter {
  ResultadoEnvio enviar(Alerta alerta);
}
