package ar.edu.utn.frba.ddsi.climalert.entity;

public class MockCorreoAdapter {
}
